--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap 4 Website Example</title>
+  <title>THÔNG TIN ĐẤT ĐAI TỈNH CÀ MAU | DIADU CO,.LTD.</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -74,31 +74,84 @@
         <a href="#">
           <i class="fa fa-map"></i>
         </a>
-      </li>      
-    </ul>
-  </div>
-  <div class="ddc__content ddc__app_content">
-    <div class="ddc__content_wrapper">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="ddc_content_contaier">
-            <div class="ddc_wrapper_head">
-             BẢN ĐỒ
-           </div>
-           <div class="ddc_wrapper_body">
-             <div id="viewDiv"></div>
-           </div>
-         </div> 
-       </div>    
+      </li>
+      <li id="tintuc" title="tin tức">
+        <a href="#">
+          <i class="fa fa-map"></i>
+        </a>
+      </li>       
+    </div>
+    <div class="ddc_popup">
+      <div class="x ddc_close">X</div>
+      <div class="ddc_popup_content">
+        <div class="ddc_popup_head">Head</div>
+        <div class="ddc_popup_body">
+          <div class="form-group">
+            <label>Name</label>
+            <input class="form-control" type="text" name="name" placeholder="text">
+          </div>
+          <div class="form-group">
+            <label>Name</label>
+            <input class="form-control" type="text" name="name" placeholder="text">
+          </div>
+          <div class="form-group">
+            <label>Name</label>
+            <input class="form-control" type="text" name="name" placeholder="text">
+          </div>
+          <div class="form-group">
+            <label>Name</label>
+            <input class="form-control" type="text" name="name" placeholder="text">
+          </div>
+          <div class="form-group">
+            <label>Name</label>
+            <input class="form-control" type="text" name="name" placeholder="text">
+          </div>
+          <div class="form-group">
+            <label>Name</label>
+            <input class="form-control" type="text" name="name" placeholder="text">
+          </div>     
+          <div class="form-group">
+            <label>Name</label>
+            <input class="form-control" type="text" name="name" placeholder="text">
+          </div>
+          <div class="form-group">
+            <label>Name</label>
+            <input class="form-control" type="text" name="name" placeholder="text">
+          </div>
+          <div class="form-group">
+            <label>Name</label>
+            <input class="form-control" type="text" name="name" placeholder="text">
+          </div>
+        </div>
+        <div class="ddc_popup_footer">
+          <div class="btn btn-success ddc_submit">Thực hiện</div>
+          <div class="btn btn-danger ddc_close">Hủy bỏ</div>
+        </div>
+      </div>
+    </div> 
+    <div class="ddc__content ddc__app_content">
+      <div class="ddc__content_wrapper">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="ddc_content_contaier">
+              <div class="ddc_wrapper_head">
+               BẢN ĐỒ
+             </div>
+             <div class="ddc_wrapper_body">
+               <div id="viewDiv"></div>
+             </div>
+           </div> 
+         </div>    
+       </div>
      </div>
    </div>
- </div>
 
- <footer class="dcc_footer">
-   <p class="mb-0 px-2">Copyright © 2021 DIADU , All rights reserved.</p>
- </footer>
+   <footer class="dcc_footer">
+     <p class="mb-0 px-2">Copyright © 2021 DIADU , All rights reserved.</p>
+   </footer>
 
-</body>
-<script src="https://js.arcgis.com/4.14/"></script>
-<script src="./js/helper.js"></script>
-</html>
+ </body>
+ <script src="https://js.arcgis.com/4.14/"></script>
+ <script src="./js/helper.js"></script>
+ <script src="./js/custom.js"></script>
+ </html>
