--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
      </div>
    </div>
 
-   <footer class="dcc_footer">
+<!--    <footer class="dcc_footer">
      <p class="mb-0 px-2">Copyright © 2021 DIADU , All rights reserved.</p>
-   </footer>
+   </footer> -->
 
  </body>
  <script src="https://js.arcgis.com/4.14/"></script>
