--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </nav>
   <div class="ddc__menu ddc__menu_fixed ddc__menu_shadow">  
     <ul>
-      <li class="mylocation">
+      <li class="mylocation" title="Vị trí hiện tại">
         <a href="#">
           <i class="fa fa-crosshairs"></i>
         </a>
@@ -45,22 +45,22 @@
           <i class="fa fa-bookmark"></i>
         </a>
       </li>
-      <li id="layerList">
+      <li id="layerList" title="Lớp dữ liệu">
         <a href="#">
           <i class="fa fa-object-ungroup"></i>
         </a>
       </li>
-      <li>
+      <li id="" title="Thêm/Sửa/Xóa dữ liệu">
         <a href="#">
           <i class="fa fa-pencil-square-o"></i>
         </a>
       </li>
-      <li>
+      <li id="" title="Tìm kiếm">
         <a href="#">
           <i class="fa fa-search"></i>
         </a>
       </li>
-      <li>
+      <li id="" title="Lọc dữ liệu">
         <a href="#">
           <i class="fa fa-filter"></i>
         </a>
@@ -71,12 +71,12 @@
           <i class="fa fa-map"></i>
         </a>
       </li> -->
-      <li id="baseMap">
+      <li id="baseMap" title="Loại bản đồ">
         <a href="#">
           <i class="fa fa-map"></i>
         </a>
       </li>      
-      <li id="tintuc" title="tin tức">
+      <li id="tintuc" title="Demo dữ liệu">
         <a href="#">
           <i class="fa fa-map"></i>
         </a>
