--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <a href="#">
           <i class="fa fa-map"></i>
         </a>
-      </li>      
+      </li>
       <li id="tintuc" title="Demo dữ liệu">
         <a href="#">
           <i class="fa fa-map"></i>
@@ -162,9 +162,9 @@
         <div class="row">
           <div class="col-md-12">
             <div class="ddc_content_contaier">
-              <div class="ddc_wrapper_head">
+             <!--  <div class="ddc_wrapper_head">
                BẢN ĐỒ
-             </div>
+             </div> -->
              <div class="ddc_wrapper_body">
                <div id="viewDiv"></div>
              </div>
