--- a/index.html
+++ b/index.html
@@ -40,17 +40,38 @@
           <i class="fa fa-crosshairs"></i>
         </a>
       </li>
-      <li>
+      <li id="thuadat" class="ddc_svg" title="Tra cứu thửa đất">
+        <a href="#">
+          <img src="./img/svg/searchbook.svg">
+        </a>
+      </li>
+      <li id="giadat" class="ddc_svg" title="Tra cứu giá đất">
+        <a href="#">
+          <img src="./img/svg/searchmoney.svg">
+        </a>
+      </li>
+      <li id="quydat" class="ddc_svg" title="Tra cứu quỹ đất">
+        <a href="#">
+          <img src="./img/svg/locate.svg">
+        </a>
+      </li>
+      <li id="doluong" class="ddc_svg" title="Đo lường">
+        <a href="#">
+          <img src="./img/svg/ruler.svg">
+        </a>
+      </li>
+      <!-- bookmark -->
+     <!--  <li>
         <a href="#">
           <i class="fa fa-bookmark"></i>
         </a>
-      </li>
+      </li> -->
       <li id="layerList" title="Lớp dữ liệu">
         <a href="#">
           <i class="fa fa-object-ungroup"></i>
         </a>
       </li>
-      <li id="" title="Thêm/Sửa/Xóa dữ liệu">
+      <!-- <li id="" title="Thêm/Sửa/Xóa dữ liệu">
         <a href="#">
           <i class="fa fa-pencil-square-o"></i>
         </a>
@@ -64,7 +85,7 @@
         <a href="#">
           <i class="fa fa-filter"></i>
         </a>
-      </li>
+      </li> -->
       <!-- Của thước đo mà chưa có icon thích hợp -->
       <!-- <li>
         <a href="#">
@@ -155,6 +176,135 @@
           <div></div>
           <div class="btn btn-danger ddc_close">Hủy bỏ</div>
         </div>
+      </div>
+    </div>
+    <!-- popup Tra cứu thửa đất -->
+    <div class="ddc_popup ddc_thuadat">
+      <div class="x ddc_close">X</div>
+      <div class="ddc_popup_content">
+        <div class="ddc_popup_head">Tra cứu thửa đất</div>
+        <div class="ddc_popup_body">
+          <div class="form-group">
+            <label>Quận/Huyện: (*)</label>
+            <select class="form-control">
+              <option>-- Quận/Huyện --</option>
+              <option>Cẩm Lệ</option>
+              <option>Hải Châu</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label>Phường/Xã: (*)</label>
+            <select class="form-control">
+              <option>-- Phường/Xã --</option>
+              <option>Cẩm Lệ</option>
+              <option>Hải Châu</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label>Số tờ: (*)</label>
+            <input class="form-control" type="text" name="name" placeholder="Số tờ">
+          </div>
+          <div class="form-group">
+            <label>Số thửa: (*)</label>
+            <input class="form-control" type="text" name="name" placeholder="Số thửa">
+          </div>
+          <div class="form-group">
+            <label>Địa chỉ</label>
+            <input class="form-control" type="text" name="name" placeholder="Địa chỉ">
+          </div>
+        </div>
+        <div class="ddc_popup_footer">
+          <div class="btn btn-success ddc_submit">Thực hiện</div>
+          <div class="btn btn-danger ddc_close">Hủy bỏ</div>
+        </div>
+      </div>
+    </div>
+    <!-- popup Tra cứu giá đất -->
+    <div class="ddc_popup ddc_giadat">
+      <div class="x ddc_close">X</div>
+      <div class="ddc_popup_content">
+        <div class="ddc_popup_head">Tra cứu giá đất</div>
+        <div class="ddc_popup_body">
+          <div class="form-group">
+            <label>Năm</label>
+            <select class="form-control">
+              <option>-- Năm --</option>
+              <option>2021</option>
+              <option>2020</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label>Đơn vị</label>
+            <select class="form-control">
+              <option>-- Thành phố --</option>
+              <option>Cẩm Lệ</option>
+              <option>Hải Châu</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label>Quận/Huyện</label>
+            <select class="form-control">
+              <option>-- Quận/Huyện --</option>
+              <option>Cẩm Lệ</option>
+              <option>Hải Châu</option>
+            </select>
+          </div>
+        </div>
+        <div class="ddc_popup_footer">
+          <div class="btn btn-success ddc_submit">Thực hiện</div>
+          <div class="btn btn-danger ddc_close">Hủy bỏ</div>
+        </div>
+      </div>
+    </div>
+    <!-- popup Tra cứu quỹ đất -->
+    <div class="ddc_popup ddc_quydat">
+      <div class="x ddc_close">X</div>
+      <div class="ddc_popup_content">
+        <div class="ddc_popup_head">Tra cứu quỹ đất</div>
+        <div class="ddc_popup_body">
+          <div class="form-group">
+            <label>Quận/Huyện:</label>
+            <select class="form-control">
+              <option>-- Quận/Huyện --</option>
+              <option>Cẩm Lệ</option>
+              <option>Hải Châu</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label>Phường/Xã:</label>
+            <select class="form-control">
+              <option>-- Phường/Xã --</option>
+              <option>Cẩm Lệ</option>
+              <option>Hải Châu</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label>Tên dự án:</label>
+            <input class="form-control" type="text" name="name" placeholder="Tên dự án">
+          </div>
+          <div class="form-group">
+            <label>Ký hiệu lô đất:</label>
+            <input class="form-control" type="text" name="name" placeholder="Ký hiệu lô đất">
+          </div>
+        </div>
+        <div class="ddc_popup_footer">
+          <div class="btn btn-success ddc_submit">Thực hiện</div>
+          <div class="btn btn-danger ddc_close">Hủy bỏ</div>
+        </div>
+      </div>
+    </div>
+    <!-- popup đo lường -->
+    <div class="ddc_popup ddc_doluong">
+      <div class="x ddc_close">X</div>
+      <div class="ddc_popup_content">
+        <div class="ddc_popup_head">Đo lường</div>
+        <div class="ddc_popup_body">
+          Công cụ đo lường
+        </div>
+       <!--  <div class="ddc_popup_footer">
+          <div class="btn btn-success ddc_submit">Thực hiện</div>
+          <div class="btn btn-danger ddc_close">Hủy bỏ</div>
+        </div> -->
       </div>
     </div>
     <div class="ddc__content ddc__app_content">
