--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>THÔNG TIN ĐẤT ĐAI TỈNH CÀ MAU | DIADU CO,.LTD.</title>
   <meta charset="utf-8">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/custom.css">
