--- a/index.html
+++ b/index.html
@@ -36,27 +36,27 @@
   </nav>
   <div class="ddc__menu ddc__menu_fixed ddc__menu_shadow">  
     <ul>
-      <li class="mylocation" title="Vị trí hiện tại">
+      <li class="mylocation" rel="popover" data-trigger="hover" data-content="Vị trí hiện tại">
         <a href="#">
           <i class="fa fa-crosshairs"></i>
         </a>
       </li>
-      <li id="thuadat" class="ddc_svg" title="Tra cứu thửa đất">
+      <li id="thuadat" class="ddc_svg" rel="popover" data-trigger="hover" data-content="Tra cứu thửa đất">
         <a href="#">
           <img src="./img/svg/searchbook.svg">
         </a>
       </li>
-      <li id="giadat" class="ddc_svg" title="Tra cứu giá đất">
+      <li id="giadat" class="ddc_svg" rel="popover" data-trigger="hover" data-content="Tra cứu giá đất">
         <a href="#">
           <img src="./img/svg/searchmoney.svg">
         </a>
       </li>
-      <li id="quydat" class="ddc_svg" title="Tra cứu quỹ đất">
+      <li id="quydat" class="ddc_svg" rel="popover" data-trigger="hover" data-content="Tra cứu quỹ đất">
         <a href="#">
           <img src="./img/svg/locate.svg">
         </a>
       </li>
-      <li id="doluong" class="ddc_svg" title="Đo lường">
+      <li id="doluong" class="ddc_svg" rel="popover" data-trigger="hover" data-content="Đo lường">
         <a href="#">
           <img src="./img/svg/ruler.svg">
         </a>
@@ -67,7 +67,7 @@
           <i class="fa fa-bookmark"></i>
         </a>
       </li> -->
-      <li id="layerList" title="Lớp dữ liệu">
+      <li id="layerList" rel="popover" data-trigger="hover" data-content="Lớp dữ liệu">
         <a href="#">
           <i class="fa fa-object-ungroup"></i>
         </a>
@@ -93,12 +93,12 @@
           <i class="fa fa-map"></i>
         </a>
       </li> -->
-      <li id="baseMap" title="Loại bản đồ">
+      <li id="baseMap" rel="popover" data-trigger="hover" data-content="Loại bản đồ">
         <a href="#">
           <i class="fa fa-map"></i>
         </a>
       </li>
-      <li id="tintuc" title="Demo dữ liệu">
+      <li id="tintuc" rel="popover" data-trigger="hover" data-content="Demo dữ liệu">
         <a href="#">
           <i class="fa fa-map"></i>
         </a>
