--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>THÔNG TIN ĐẤT ĐAI TỈNH CÀ MAU | DIADU CO,.LTD.</title>
   <meta charset="utf-8">
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/custom.css">
@@ -98,210 +98,245 @@
           <i class="fa fa-map"></i>
         </a>
       </li>
-      <li id="tintuc" rel="popover" data-trigger="hover" data-content="Demo dữ liệu">
+      <li id="tintuc" class="ddc_svg" rel="popover" data-trigger="hover" data-content="Demo dữ liệu">
         <a href="#">
-          <i class="fa fa-map"></i>
+          <img src="./img/svg/info.svg">
         </a>
       </li>       
     </div>
     <!-- demo Popup -->
     <div class="ddc_popup ddc_info">
-      <div class="x ddc_close">X</div>
-      <div class="ddc_popup_content">
-        <div class="ddc_popup_head">Demo Popup</div>
-        <div class="ddc_popup_body">
-          <div class="form-group">
-            <label>Name</label>
-            <input class="form-control" type="text" name="name" placeholder="text">
-          </div>
-          <div class="form-group">
-            <label>Name</label>
-            <input class="form-control" type="text" name="name" placeholder="text">
-          </div>
-          <div class="form-group">
-            <label>Name</label>
-            <input class="form-control" type="text" name="name" placeholder="text">
-          </div>
-          <div class="form-group">
-            <label>Name</label>
-            <input class="form-control" type="text" name="name" placeholder="text">
-          </div>
-          <div class="form-group">
-            <label>Name</label>
-            <input class="form-control" type="text" name="name" placeholder="text">
-          </div>
-          <div class="form-group">
-            <label>Name</label>
-            <input class="form-control" type="text" name="name" placeholder="text">
-          </div>     
-          <div class="form-group">
-            <label>Name</label>
-            <input class="form-control" type="text" name="name" placeholder="text">
-          </div>
-          <div class="form-group">
-            <label>Name</label>
-            <input class="form-control" type="text" name="name" placeholder="text">
-          </div>
-          <div class="form-group">
-            <label>Name</label>
-            <input class="form-control" type="text" name="name" placeholder="text">
-          </div>
-        </div>
-        <div class="ddc_popup_footer">
-          <div class="btn btn-success ddc_submit">Thực hiện</div>
-          <div class="btn btn-danger ddc_close">Hủy bỏ</div>
-        </div>
+     <div class="ddc_grid_head">
+      <div></div>
+      <div class="x ddc_close">
+        <img src="./img/svg/close.svg">
       </div>
     </div>
-    <!-- popup Basemap -->
-    <div class="ddc_popup ddc_baseMap">
-      <div class="x ddc_close">X</div>
-      <div class="ddc_popup_content">
-        <div class="ddc_popup_head">Chọn loại bản đồ</div>
-        <div class="ddc_popup_body" id="ddc_body_baseMap">
+    <div class="ddc_popup_content">
+      <div class="ddc_popup_head">Demo Popup</div>
+      <div class="ddc_popup_body">
+        <div class="form-group">
+          <label>Name</label>
+          <input class="form-control" type="text" name="name" placeholder="text">
         </div>
-        <div class="ddc_popup_footer">
-          <div></div>
-          <div class="btn btn-danger ddc_close">Hủy bỏ</div>
+        <div class="form-group">
+          <label>Name</label>
+          <input class="form-control" type="text" name="name" placeholder="text">
+        </div>
+        <div class="form-group">
+          <label>Name</label>
+          <input class="form-control" type="text" name="name" placeholder="text">
+        </div>
+        <div class="form-group">
+          <label>Name</label>
+          <input class="form-control" type="text" name="name" placeholder="text">
+        </div>
+        <div class="form-group">
+          <label>Name</label>
+          <input class="form-control" type="text" name="name" placeholder="text">
+        </div>
+        <div class="form-group">
+          <label>Name</label>
+          <input class="form-control" type="text" name="name" placeholder="text">
+        </div>     
+        <div class="form-group">
+          <label>Name</label>
+          <input class="form-control" type="text" name="name" placeholder="text">
+        </div>
+        <div class="form-group">
+          <label>Name</label>
+          <input class="form-control" type="text" name="name" placeholder="text">
+        </div>
+        <div class="form-group">
+          <label>Name</label>
+          <input class="form-control" type="text" name="name" placeholder="text">
         </div>
       </div>
-    </div> 
-    <!-- popup layerList -->
-    <div class="ddc_popup ddc_layerList">
-      <div class="x ddc_close">X</div>
-      <div class="ddc_popup_content">
-        <div class="ddc_popup_head">Lớp dữ liệu</div>
-        <div class="ddc_popup_body" id="ddc_layerList">
-        </div>
-        <div class="ddc_popup_footer">
-          <div></div>
-          <div class="btn btn-danger ddc_close">Hủy bỏ</div>
-        </div>
-      </div>
-    </div>
-    <!-- popup Tra cứu thửa đất -->
-    <div class="ddc_popup ddc_thuadat">
-      <div class="x ddc_close">X</div>
-      <div class="ddc_popup_content">
-        <div class="ddc_popup_head">Tra cứu thửa đất</div>
-        <div class="ddc_popup_body">
-          <div class="form-group">
-            <label>Quận/Huyện: (*)</label>
-            <select class="form-control">
-              <option>-- Quận/Huyện --</option>
-              <option>Cẩm Lệ</option>
-              <option>Hải Châu</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label>Phường/Xã: (*)</label>
-            <select class="form-control">
-              <option>-- Phường/Xã --</option>
-              <option>Cẩm Lệ</option>
-              <option>Hải Châu</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label>Số tờ: (*)</label>
-            <input class="form-control" type="text" name="name" placeholder="Số tờ">
-          </div>
-          <div class="form-group">
-            <label>Số thửa: (*)</label>
-            <input class="form-control" type="text" name="name" placeholder="Số thửa">
-          </div>
-          <div class="form-group">
-            <label>Địa chỉ</label>
-            <input class="form-control" type="text" name="name" placeholder="Địa chỉ">
-          </div>
-        </div>
-        <div class="ddc_popup_footer">
-          <div class="btn btn-success ddc_submit">Thực hiện</div>
-          <div class="btn btn-danger ddc_close">Hủy bỏ</div>
-        </div>
+      <div class="ddc_popup_footer">
+        <div class="btn btn-success ddc_submit">Thực hiện</div>
+        <div class="btn btn-danger ddc_close">Hủy bỏ</div>
       </div>
     </div>
-    <!-- popup Tra cứu giá đất -->
-    <div class="ddc_popup ddc_giadat">
-      <div class="x ddc_close">X</div>
-      <div class="ddc_popup_content">
-        <div class="ddc_popup_head">Tra cứu giá đất</div>
-        <div class="ddc_popup_body">
-          <div class="form-group">
-            <label>Năm</label>
-            <select class="form-control">
-              <option>-- Năm --</option>
-              <option>2021</option>
-              <option>2020</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label>Đơn vị</label>
-            <select class="form-control">
-              <option>-- Thành phố --</option>
-              <option>Cẩm Lệ</option>
-              <option>Hải Châu</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label>Quận/Huyện</label>
-            <select class="form-control">
-              <option>-- Quận/Huyện --</option>
-              <option>Cẩm Lệ</option>
-              <option>Hải Châu</option>
-            </select>
-          </div>
-        </div>
-        <div class="ddc_popup_footer">
-          <div class="btn btn-success ddc_submit">Thực hiện</div>
-          <div class="btn btn-danger ddc_close">Hủy bỏ</div>
-        </div>
+  </div>
+  <!-- popup Basemap -->
+  <div class="ddc_popup ddc_baseMap">
+    <div class="ddc_grid_head">
+      <div></div>
+      <div class="x ddc_close">
+        <img src="./img/svg/close.svg">
       </div>
     </div>
-    <!-- popup Tra cứu quỹ đất -->
-    <div class="ddc_popup ddc_quydat">
-      <div class="x ddc_close">X</div>
-      <div class="ddc_popup_content">
-        <div class="ddc_popup_head">Tra cứu quỹ đất</div>
-        <div class="ddc_popup_body">
-          <div class="form-group">
-            <label>Quận/Huyện:</label>
-            <select class="form-control">
-              <option>-- Quận/Huyện --</option>
-              <option>Cẩm Lệ</option>
-              <option>Hải Châu</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label>Phường/Xã:</label>
-            <select class="form-control">
-              <option>-- Phường/Xã --</option>
-              <option>Cẩm Lệ</option>
-              <option>Hải Châu</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label>Tên dự án:</label>
-            <input class="form-control" type="text" name="name" placeholder="Tên dự án">
-          </div>
-          <div class="form-group">
-            <label>Ký hiệu lô đất:</label>
-            <input class="form-control" type="text" name="name" placeholder="Ký hiệu lô đất">
-          </div>
-        </div>
-        <div class="ddc_popup_footer">
-          <div class="btn btn-success ddc_submit">Thực hiện</div>
-          <div class="btn btn-danger ddc_close">Hủy bỏ</div>
-        </div>
+    <div class="ddc_popup_content">
+      <div class="ddc_popup_head">Chọn loại bản đồ</div>
+      <div class="ddc_popup_body" id="ddc_body_baseMap">
+      </div>
+      <div class="ddc_popup_footer">
+        <div></div>
+        <div class="btn btn-danger ddc_close">Hủy bỏ</div>
       </div>
     </div>
-    <!-- popup đo lường -->
-    <div class="ddc_popup ddc_doluong">
-      <div class="x ddc_close">X</div>
-      <div class="ddc_popup_content">
-        <div class="ddc_popup_head">Đo lường</div>
-        <div class="ddc_popup_body">
-          Công cụ đo lường
-        </div>
+  </div> 
+  <!-- popup layerList -->
+  <div class="ddc_popup ddc_layerList">
+   <div class="ddc_grid_head">
+    <div></div>
+    <div class="x ddc_close">
+      <img src="./img/svg/close.svg">
+    </div>
+  </div>
+  <div class="ddc_popup_content">
+    <div class="ddc_popup_head">Lớp dữ liệu</div>
+    <div class="ddc_popup_body" id="ddc_layerList">
+    </div>
+    <div class="ddc_popup_footer">
+      <div></div>
+      <div class="btn btn-danger ddc_close">Hủy bỏ</div>
+    </div>
+  </div>
+</div>
+<!-- popup Tra cứu thửa đất -->
+<div class="ddc_popup ddc_thuadat">
+ <div class="ddc_grid_head">
+  <div></div>
+  <div class="x ddc_close">
+    <img src="./img/svg/close.svg">
+  </div>
+</div>
+<div class="ddc_popup_content">
+  <div class="ddc_popup_head">Tra cứu thửa đất</div>
+  <div class="ddc_popup_body">
+    <div class="form-group">
+      <label>Quận/Huyện: (*)</label>
+      <select class="form-control">
+        <option>-- Quận/Huyện --</option>
+        <option>Cẩm Lệ</option>
+        <option>Hải Châu</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label>Phường/Xã: (*)</label>
+      <select class="form-control">
+        <option>-- Phường/Xã --</option>
+        <option>Cẩm Lệ</option>
+        <option>Hải Châu</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label>Số tờ: (*)</label>
+      <input class="form-control" type="text" name="name" placeholder="Số tờ">
+    </div>
+    <div class="form-group">
+      <label>Số thửa: (*)</label>
+      <input class="form-control" type="text" name="name" placeholder="Số thửa">
+    </div>
+    <div class="form-group">
+      <label>Địa chỉ</label>
+      <input class="form-control" type="text" name="name" placeholder="Địa chỉ">
+    </div>
+  </div>
+  <div class="ddc_popup_footer">
+    <div class="btn btn-success ddc_submit">Thực hiện</div>
+    <div class="btn btn-danger ddc_close">Hủy bỏ</div>
+  </div>
+</div>
+</div>
+<!-- popup Tra cứu giá đất -->
+<div class="ddc_popup ddc_giadat">
+ <div class="ddc_grid_head">
+  <div></div>
+  <div class="x ddc_close">
+    <img src="./img/svg/close.svg">
+  </div>
+</div>
+<div class="ddc_popup_content">
+  <div class="ddc_popup_head">Tra cứu giá đất</div>
+  <div class="ddc_popup_body">
+    <div class="form-group">
+      <label>Năm</label>
+      <select class="form-control">
+        <option>-- Năm --</option>
+        <option>2021</option>
+        <option>2020</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label>Đơn vị</label>
+      <select class="form-control">
+        <option>-- Thành phố --</option>
+        <option>Cẩm Lệ</option>
+        <option>Hải Châu</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label>Quận/Huyện</label>
+      <select class="form-control">
+        <option>-- Quận/Huyện --</option>
+        <option>Cẩm Lệ</option>
+        <option>Hải Châu</option>
+      </select>
+    </div>
+  </div>
+  <div class="ddc_popup_footer">
+    <div class="btn btn-success ddc_submit">Thực hiện</div>
+    <div class="btn btn-danger ddc_close">Hủy bỏ</div>
+  </div>
+</div>
+</div>
+<!-- popup Tra cứu quỹ đất -->
+<div class="ddc_popup ddc_quydat">
+ <div class="ddc_grid_head">
+  <div></div>
+  <div class="x ddc_close">
+    <img src="./img/svg/close.svg">
+  </div>
+</div>
+<div class="ddc_popup_content">
+  <div class="ddc_popup_head">Tra cứu quỹ đất</div>
+  <div class="ddc_popup_body">
+    <div class="form-group">
+      <label>Quận/Huyện:</label>
+      <select class="form-control">
+        <option>-- Quận/Huyện --</option>
+        <option>Cẩm Lệ</option>
+        <option>Hải Châu</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label>Phường/Xã:</label>
+      <select class="form-control">
+        <option>-- Phường/Xã --</option>
+        <option>Cẩm Lệ</option>
+        <option>Hải Châu</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label>Tên dự án:</label>
+      <input class="form-control" type="text" name="name" placeholder="Tên dự án">
+    </div>
+    <div class="form-group">
+      <label>Ký hiệu lô đất:</label>
+      <input class="form-control" type="text" name="name" placeholder="Ký hiệu lô đất">
+    </div>
+  </div>
+  <div class="ddc_popup_footer">
+    <div class="btn btn-success ddc_submit">Thực hiện</div>
+    <div class="btn btn-danger ddc_close">Hủy bỏ</div>
+  </div>
+</div>
+</div>
+<!-- popup đo lường -->
+<div class="ddc_popup ddc_doluong">
+ <div class="ddc_grid_head">
+  <div></div>
+  <div class="x ddc_close">
+    <img src="./img/svg/close.svg">
+  </div>
+</div>
+<div class="ddc_popup_content">
+  <div class="ddc_popup_head">Đo lường</div>
+  <div class="ddc_popup_body">
+    Công cụ đo lường
+  </div>
        <!--  <div class="ddc_popup_footer">
           <div class="btn btn-success ddc_submit">Thực hiện</div>
           <div class="btn btn-danger ddc_close">Hủy bỏ</div>
