--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>THÔNG TIN ĐẤT ĐAI TỈNH CÀ MAU | DIADU CO,.LTD.</title>
+  <title>Hệ thống GIS quản lý quy hoạch, xây dựng và thông tin đất đai | DIADU CO,.LTD.</title>
   <meta charset="utf-8">
   <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,7 +30,7 @@
         </a>
       </li>   
       <li class="nav-item">
-        <span class="nav-link dcc__h2_info">Thông tin đất đai tỉnh Cà Mau</span>
+        <span class="nav-link dcc__h2_info">Hệ thống GIS quản lý quy hoạch, xây dựng và thông tin đất đai</span>
       </li>
     </ul>
   </nav>
